--- a/client-data/board.html
+++ b/client-data/board.html
@@ -42,7 +42,7 @@
 		left you’re invited to join the dialogue of shaping this space into a meaningful cultural hub where people can
 		come and share time together. <strong>Draw, write, vote & contribute!</strong><br><br><i>Click/tap this message to dismiss</i></div>
 	<div id="qrcode" class="overlay"><a href="https://shapingthecity.herokuapp.com/">https://shapingthecity.herokuapp.com/</a><img onclick="hideDialog(qrcode)" title="Close this box" href="#" src="qrcode.png" width="100%"></div>
-	<div id="foot" class="overlay"><a href="#" onclick="showHelp()"><b>Help</b></a><a href="Project introduction styled.pdf">Why?</a><a href="mailto:finlay.degrauwe+spc@student.luca-arts.be?subject=Feedback Shaping The City platform" target="_blank">Feedback</a></div>
+	<div id="foot" class="overlay"><a href="#"><b>🏠</b></a><a href="#" onclick="showHelp()"><b>Help</b></a><a href="Project introduction styled.pdf">Why?</a><a href="mailto:finlay.degrauwe+spc@student.luca-arts.be?subject=Feedback Shaping The City platform" target="_blank">Feedback</a></div>
 	<div id="help" class="overlay">
 		<section>
 		<strong>Here is an explanation of all the tools u can use to make your dreams come alive</strong>
