--- a/client-data/index.html
+++ b/client-data/index.html
@@ -42,7 +42,7 @@
 	</header>
 
 	<main>
-		<img src="drawing_example.png" width="100%">
+		<img id="headimg" src="drawing_example.png" width="100%">
 		<!--
 		<div>
 			<p>{{{translations.public_board_description}}}</p>
@@ -64,14 +64,15 @@
 		-->
 	</main>
 
+	<div id="cta" class="overlay"><h3>This summer Toestand International will go to Sarajevo. We’re drawing possible plans, skateparks & functions for spaces in Sarajevo.</h3><a href="boards/anonymous">I want to draw! ></a></div>
+
+
 	<div id="explanation" class="overlay">
 		<p>Welcome to the Shaping The City platform!</p>
 		<p>Shaping The City is a participative project about placemaking in vacant spaces. Through research and interactions
 		Finlay Degrauwe aims to build a platform that could help communities ideate about empty spaces.</p>
 		<strong>Have fun!</strong>
 	</div>
-
-	<div id="cta" class="overlay"><h3>This summer Toestand International will go to Sarajevo. We’re drawing possible plans for spaces in Sarajevo.</h3><a href="boards/anonymous">I want to draw! ></a></div>
 
 	<footer class="overlay">
 		<p>Shaping The City is a project of Finlay Degrauwe in contribution with LUCA School of Arts, VZW Toestand &
@@ -89,6 +90,7 @@
 		<a href="https://www.artsinsocietyaward.be/" class="smallink" rel="external" title="Arts in Society Awards"><img
 				alt="Arts in Society Awards logo" src="aisa_logo.png" height="64" /></a>
 	</footer>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/vivus/0.4.5/vivus.min.js" integrity="sha512-NBLGIjYyAoYAr23l+dmAcUv7TvFj0XrqZoFa4i1o+F2VvF9SrERyMD8BHNnJn1SEGjl1AouBDcCv/q52L3ozBQ==" crossorigin="anonymous"></script>
 </body>
 
 </html>
