CTA added on drawboad

--- a/client-data/board.html
+++ b/client-data/board.html
@@ -36,6 +36,7 @@
 	</div>
 
 	<!--<div id="loadingMessage" class="overlay">{{translations.loading}}</div>-->
+	<div id="infotop" class="overlay">Draw your dream skatepark!</div>
 	<div title="Close this box" id="infoheader" class="overlay" onclick="hideDialog(infoheader)"><strong>Hello my close but distant friend!</strong><br><br>
 		Here you see the blueprint of an empty building in Sarajevo. This summer a few 100 people will come together to
 		transform this space into a social- and cultural centre for the youth of Sarajevo. By using the tools on the
